ubica-backend/fix_error2.log
Traceback (most recent call last):
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\engine\base.py", line 1967, in _exec_single_context
    self.dialect.do_execute(
    ~~~~~~~~~~~~~~~~~~~~~~~^
        cursor, str_statement, effective_parameters, context
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\engine\default.py", line 952, in do_execute
    cursor.execute(statement, parameters)
    ~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^
psycopg2.errors.SyntaxError: error de sintaxis en o cerca de ½:╗
LINE 9: ...con electrodomesticos de alta gama.', 'for-rent', :features:...
                                                             ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "D:\Proyects\Ubica_proyect\ubica_v2\ubica-backend\fix_db.py", line 30, in <module>
    session.execute(text("""
    ~~~~~~~~~~~~~~~^^^^^^^^^
        INSERT INTO property (
        ^^^^^^^^^^^^^^^^^^^^^^
    ...<23 lines>...
        "oid": 1, "rid": 2, "region": "Murcia"
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    })
    ^^
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlmodel\orm\session.py", line 136, in execute
    return super().execute(
           ~~~~~~~~~~~~~~~^
        statement,
        ^^^^^^^^^^
    ...<4 lines>...
        _add_event=_add_event,
        ^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\orm\session.py", line 2351, in execute
    return self._execute_internal(
           ~~~~~~~~~~~~~~~~~~~~~~^
        statement,
        ^^^^^^^^^^
    ...<4 lines>...
        _add_event=_add_event,
        ^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\orm\session.py", line 2258, in _execute_internal
    result = conn.execute(
        statement, params or {}, execution_options=execution_options
    )
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\engine\base.py", line 1419, in execute
    return meth(
        self,
        distilled_parameters,
        execution_options or NO_OPTIONS,
    )
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\sql\elements.py", line 527, in _execute_on_connection
    return connection._execute_clauseelement(
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        self, distilled_params, execution_options
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\engine\base.py", line 1641, in _execute_clauseelement
    ret = self._execute_context(
        dialect,
    ...<8 lines>...
        cache_hit=cache_hit,
    )
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\engine\base.py", line 1846, in _execute_context
    return self._exec_single_context(
           ~~~~~~~~~~~~~~~~~~~~~~~~~^
        dialect, context, statement, parameters
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\engine\base.py", line 1986, in _exec_single_context
    self._handle_dbapi_exception(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        e, str_statement, effective_parameters, cursor, context
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\engine\base.py", line 2363, in _handle_dbapi_exception
    raise sqlalchemy_exception.with_traceback(exc_info[2]) from e
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\engine\base.py", line 1967, in _exec_single_context
    self.dialect.do_execute(
    ~~~~~~~~~~~~~~~~~~~~~~~^
        cursor, str_statement, effective_parameters, context
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\Pencho\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\engine\default.py", line 952, in do_execute
    cursor.execute(statement, parameters)
    ~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) error de sintaxis en o cerca de ½:╗
LINE 9: ...con electrodomesticos de alta gama.', 'for-rent', :features:...
                                                             ^

[SQL: 
        INSERT INTO property (
            title, type, city, address, price, bedrooms, bathrooms, area,
            description, status, features, images, latitude, longitude, year_built,
            energy_rating, orientation, owner_id, realtor_id, region,
            created_at, updated_at, purchase_price, total_cost, monthly_cost, monthly_income
        ) VALUES (
            %(title)s, %(ptype)s, %(city)s, %(address)s, %(price)s, %(bed)s, %(bath)s, %(area)s,
            %(desc)s, %(status)s, :features::jsonb, :images::jsonb, %(lat)s, %(lng)s, %(yb)s,
            %(er)s, %(orient)s, %(oid)s, %(rid)s, %(region)s,
            NOW(), NOW(), 0, 0, 0, 0
        )
    ]
[parameters: {'title': 'Atico de Lujo con Vistas', 'ptype': 'APARTAMENTO', 'city': 'Centro de Murcia', 'address': 'Plaza Circular 5', 'price': 1800, 'bed': 3, 'bath': 2, 'area': 140, 'desc': 'Espectacular atico centrico, ideal para ejecutivos. Totalmente amueblado y equipado con electrodomesticos de alta gama.', 'status': 'for-rent', 'lat': 37.9922, 'lng': -1.1307, 'yb': 2021, 'er': 'A', 'orient': 'Sur', 'oid': 1, 'rid': 2, 'region': 'Murcia'}]
(Background on this error at: https://sqlalche.me/e/20/f405)
